--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@ Hope you enjoy learning!! 😊</p>
     </div>
 
 </div>
+<a href="https://dmartinez-codes.github.io/html/resume.html">Back to home</a>
 
 </body>
 </html>
+
